--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.4",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.4.0",
     "next": "14.2.7",
     "react": "^18",
@@ -17,9 +19,13 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "@types/node": "^20.16.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "babel-loader": "^9.2.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
